--- a/index.php/index.html
+++ b/index.php/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href='css/style.css' rel='stylesheet'>
-	<link href='css/midwayrp.css' rel='stylesheet'>
+    <link href='./css/style.css' rel='stylesheet'>
+	<link href='./css/midwayrp.css' rel='stylesheet'>
     <link rel="shortcut icon" href=".png">
     <meta charset="UTF-8">
     <title>𝙈𝙄𝘿𝙒𝘼𝙔 𝙍𝙊𝙇𝙀𝙋𝙇𝘼𝙔</title>
@@ -14,9 +14,9 @@
 	    <ul>
             <li><a href="">Rules</a></li>
             <li><a href="">Staff</a></li>
-            <li><a href="https://steamcommunity.com/groups">Join Steam Group</a></li>
-            <li><a href="https://www.youtube.com/">Youtube</a></li>
-            <li><a href="https://twitter.com/">Twttie</a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
             <li><a href="">Steam</a></li>
             <li><a href=""></a></li>
         </ul>
