--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-<meta HTTP-EQUIV="REFRESH" content="0; url=https://crushenyt.github.io/index.php/">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link href='./css/style.css' rel='stylesheet'>
+	<link href='./css/midwayrp.css' rel='stylesheet'>
+    <link rel="shortcut icon" href="./css/bilder/midwayrp.png">
+    <meta charset="UTF-8">
+    <title>𝙈𝙄𝘿𝙒𝘼𝙔 𝙍𝙊𝙇𝙀𝙋𝙇𝘼𝙔</title>
+</head>
+<body>
+    <ul id="navmenu">
+    <li><a href="#">Home</a></li>
+	<li><a href="#">Info</a>
+	    <ul>
+            <li><a href="">Rules</a></li>
+            <li><a href="">Staff</a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href="">Steam</a></li>
+            <li><a href=""></a></li>
+        </ul>
+	</li>
+    <li><a href=""></a>
+	</li>
+    <li><a href="">Jobb</a>
+	    <ul>
+            <li><a href="">Police Office</a></li>
+            <li><a href="">Fire Departmen</a></li>
+            <li><a href=""></a></li>
+            <li><a href="">Sedrity</a></li>
+			<li><a href="">SCP</a></li>
+			<li><a href="">FBI</a></li>
+			<li><a href=""></a></li>
+			<li><a href="">Text</a></li>
+        </ul>
+	</li>
+    <li><a>News</a></li>
+</body>
+<div id="midwayrp">
+<pre>𝙈𝙄𝘿𝙒𝘼𝙔 𝙍𝙊𝙇𝙀𝙋𝙇𝘼𝙔</pre>
+</div>
+<div id="writing">
+<a>🖤</a>
+<h1><span aria-hidden="true"></span></h1>
+<a>🖤</a>
+</div>
+</html>
