--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <ul id="navmenu">
-    <li><a href="#">Home</a></li>
+    <li><a href="index.html">Home</a></li>
 	<li><a href="#">Info</a>
 	    <ul>
             <li><a href="">Rules</a></li>
