--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link href='./css/style.css' rel='stylesheet'>
 	<link href='./css/midwayrp.css' rel='stylesheet'>
+    <script src="./js/writing.js"></script>
     <link rel="shortcut icon" href="./css/bilder/midwayrp.png">
     <meta charset="UTF-8">
     <title>𝙈𝙄𝘿𝙒𝘼𝙔 𝙍𝙊𝙇𝙀𝙋𝙇𝘼𝙔</title>
