--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <li><a href="index.html">Home</a></li>
 	<li><a href="#">Info</a>
 	    <ul>
-            <li><a href="">Rules</a></li>
+            <li><a href="Rules.htmal">Rules</a></li>
             <li><a href="">Staff</a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
@@ -40,10 +40,5 @@
 </body>
 <div id="midwayrp">
 <pre>𝙈𝙄𝘿𝙒𝘼𝙔 𝙍𝙊𝙇𝙀𝙋𝙇𝘼𝙔</pre>
-</div>
-<div id="writing">
-<a>🖤</a>
-<h1><span aria-hidden="true"></span></h1>
-<a>🖤</a>
 </div>
 </html>
