--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
     <li><a href="index.html">Home</a></li>
 	<li><a href="#">Info</a>
 	    <ul>
-            <li><a href="Rules.htmal">Rules</a></li>
-            <li><a href="">Staff</a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href="">Steam</a></li>
-            <li><a href=""></a></li>
+            <li><a href="Rules.htmal">coming soon</a></li>
+            <li><a href="">coming soon</a></li>
+            <li><a href="">coming soon</a></li>
+            <li><a href="">coming soon</a></li>
+            <li><a href="">coming soon</a></li>
+            <li><a href="">coming soon</a></li>
+            <li><a href="">coming soon</a></li>
         </ul>
 	</li>
-    <li><a href=""></a>
+    <li><a href="">coming soon</a>
 	</li>
     <li><a href="">Jobb</a>
 	    <ul>
-            <li><a href="">Police Office</a></li>
-            <li><a href="">Fire Departmen</a></li>
-            <li><a href=""></a></li>
-            <li><a href="">Sedrity</a></li>
-			<li><a href="">SCP</a></li>
-			<li><a href="">FBI</a></li>
-			<li><a href=""></a></li>
-			<li><a href="">Text</a></li>
+            <li><a href="">coming soon</a></li>
+            <li><a href="">coming soon</a></li>
+            <li><a href="">coming soon</a></li>
+            <li><a href="">coming soon</a></li>
+			<li><a href="">coming soon</a></li>
+			<li><a href="">coming soon</a></li>
+			<li><a href="">coming soon</a></li>
+			<li><a href="">coming soon</a></li>
         </ul>
 	</li>
     <li><a>News</a></li>
