--- a/Lawyer.html
+++ b/Lawyer.html
@@ -12,7 +12,7 @@
     <li><a href="#">Home</a></li>
 	<li><a href="Info.html">Info</a></li>
     <li><a href="https://discord.io/MidWayRP">Discord</a></li>
-    <li><a href="jobb.html">Jobb</a></li>
+    <li><a href="index2.html">Jobb</a></li>
     <li><a>News</a>
     <ul>
      <li><a>Rules</a></li>
@@ -21,7 +21,7 @@
     <br>
     <br>
     <div id="midwayrp">
-    <pre>𝙈𝙄𝘿𝙒𝘼𝙔 𝙍𝙊𝙇𝙀𝙋𝙇𝘼𝙔</pre>
+    <pre>coming soon</pre>
     </div>
 </body>
 
