--- a/backup.html
+++ b/backup.html
@@ -4,7 +4,7 @@
 <head>
     <link href='css/info.css' rel='stylesheet'>
 	<link href='css/midwayrp.css' rel='stylesheet'>
-    <link rel="shortcut icon" href=".png">
+    <link rel="shortcut icon" href="./css/bilder/midwayrp.png">
     <meta charset="UTF-8">
     <title>𝙈𝙄𝘿𝙒𝘼𝙔 𝙍𝙊𝙇𝙀𝙋𝙇𝘼𝙔</title>
 </head>
