--- a/Info.html
+++ b/Info.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href='css/info.css' rel='stylesheet'>
-	<link href='css/midwayrp.css' rel='stylesheet'>
-    <link rel="shortcut icon" href=".png">
+    <link href='./css/info.css' rel='stylesheet'>
+	<link href='./css/midwayrp.css' rel='stylesheet'>
+    <link rel="shortcut icon" href="./css/bilder/midwayrp.png">
     <meta charset="UTF-8">
     <title>𝙈𝙄𝘿𝙒𝘼𝙔 𝙍𝙊𝙇𝙀𝙋𝙇𝘼𝙔</title>
 </head>
 <body>
     <ul id="navmenu">
     <li><a href="index.html">Home</a></li>
-	<li><a href=""href="#">Rules</a></li>
+	<li><a href=""href="">coming soon</a></li>
     <li><a href="">coming soon</a></li>
     <li><a href="https://steamcommunity.com/groups/MidWayRP">Steam Group</a></li>
     <li><a href=""></a></li>
