--- a/Police.html
+++ b/Police.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href='css/Police.css' rel='stylesheet'>
-    <link rel="shortcut icon" href=".png">
+    <link href='./css/Police.css' rel='stylesheet'>
+    <link rel="shortcut icon" href="./css/bilder/midwayrp.png">
     <meta charset="UTF-8">
     <title>𝙈𝙄𝘿𝙒𝘼𝙔 𝙍𝙊𝙇𝙀𝙋𝙇𝘼𝙔</title>
 </head>
