--- a/Security.html
+++ b/Security.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href='css/style.css' rel='stylesheet'>
-	<link href='css/midwayrp.css' rel='stylesheet'>
-    <link rel="shortcut icon" href=".png">
+    <link href='./css/style.css' rel='stylesheet'>
+	<link href='./css/midwayrp.css' rel='stylesheet'>
+    <link rel="shortcut icon" href="./css/bilder/midwayrp.png">
     <meta charset="UTF-8">
     <title>𝙈𝙄𝘿𝙒𝘼𝙔 𝙍𝙊𝙇𝙀𝙋𝙇𝘼𝙔</title>
 </head>
@@ -13,11 +13,7 @@
 	<li><a href="Info.html">Info</a></li>
     <li><a href="https://discord.io/MidWayRP">Discord</a></li>
     <li><a href="index2.html">Jobb</a></li>
-    <li><a>News</a>
-    <ul>
-     <li><a>Rules</a></li>
-    </ul>
-    </li>
+    <li><a>News</a></li>
     <br>
     <br>
     <div id="midwayrp">
