--- a/Police.html
+++ b/Police.html
@@ -9,7 +9,7 @@
 <body>
     <ul id="navmenu">
     <li><a href="index.html">Home</a></li>
-    <li><a href="Police.html">GO back</a></li>
+    <li><a href="index.html">GO back</a></li>
     <li><a href="PoliceDepartment.html">Police Department</a></li>
     <li><a href="HighwayPatrol.html">Highway Patrol</a></li>
     <li><a href="PaletoBay.html">Paleto Bay</a></li>
