--- a/PoliceDepartment.html
+++ b/PoliceDepartment.html
@@ -10,7 +10,7 @@
 <body>
     <ul id="navmenu">
     <li><a href="#">Home</a></li>
-	<li><a href="Info.html">Info</a></li>
+	<li><a href="Police.html">GO back</a></li>
     <li><a href="https://discord.io/MidWayRP">Discord</a></li>
     <li><a href="index2.html">Jobb</a></li>
     <li><a>News</a></li>
