--- a/Police.html
+++ b/Police.html
@@ -11,9 +11,9 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="index.html">GO back</a></li>
     <li><a href="PoliceDepartment.html">Police Department</a></li>
-    <li><a href="HighwayPatrol.html">Highway Patrol</a></li>
-    <li><a href="PaletoBay.html">Paleto Bay</a></li>
-    <li><a href="SheriffOffice.html">Sheriff's Office</a></li>
+    <li><a href="HighwayPatrol.html">Highway Department</a></li>
+    <li><a href="PaletoBay.html">Paleto Department</a></li>
+    <li><a href="SheriffOffice.html">Sheriff's Department</a></li>
     <li><a href="https://discord.io/MidWayRP">Discord</a></li>
 </body>
 </html>
