--- a/jobb.html
+++ b/jobb.html
@@ -11,7 +11,7 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="Police.html">Police</a></li>
     <li><a href="FireDepartment.html">Fire Department</a></li>
-    <li><a href="Hospita.html">Hospital</a></li>
+    <li><a href="Media.html">Media</a></li>
     <li><a href="Security.html">Security</a></li>
     <li><a href="SCP.html">SCP</a></li>
     <li><a href="FBI.html">FBI</a></li>
@@ -20,5 +20,6 @@
     <li><a href="Lawyer.html">Lawyer</a></li>
     <li><a href="Dealership.html">Dealership</a></li>
     <li><a href="https://discord.io/MidWayRP">Discord</a></li>
+</ul>
 </body>
 </html>
