--- a/FBI.html
+++ b/FBI.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href='./css/style.css' rel='stylesheet'>
+    <link href='./css/coming soon.css' rel='stylesheet'>
 	<link href='./css/midwayrp.css' rel='stylesheet'>
     <link rel="shortcut icon" href="./css/bilder/midwayrp.png">
     <meta charset="UTF-8">
@@ -9,16 +9,14 @@
 </head>
 <body>
     <ul id="navmenu">
-    <li><a href="#">Home</a></li>
-	<li><a href="Info.html">Info</a></li>
-    <li><a href="https://discord.io/MidWayRP">Discord</a></li>
-    <li><a href="index2.html">Jobb</a></li>
-    <li><a>News</a></li>
-    <br>
-    <br>
-    <div id="midwayrp">
-    <pre>coming soon</pre>
-    </div>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">GO back</a></li>
+        <li><a href="">coming soon</a></li>
+        <li><a href="">coming soon</a></li>
+        <li><a href="">coming soon</a></li>
+        <li><a href="">coming soon</a></li>
+        <li><a href="https://discord.io/MidWayRP">Discord</a></li>
+    </ul>
 </body>
 
 </html>
