--- a/SCP.html
+++ b/SCP.html
@@ -9,11 +9,14 @@
 </head>
 <body>
     <ul id="navmenu">
-    <li><a href="#">Home</a></li>
-	<li><a href="Info.html">Info</a></li>
-    <li><a href="https://discord.io/MidWayRP">Discord</a></li>
-    <li><a href="index2.html">Jobb</a></li>
-    <li><a>News</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">GO back</a></li>
+        <li><a href="">coming soon</a></li>
+        <li><a href="">coming soon</a></li>
+        <li><a href="">coming soon</a></li>
+        <li><a href="">coming soon</a></li>
+        <li><a href="https://discord.io/MidWayRP">Discord</a></li>
+    </ul>
     <br>
     <br>
     <div id="midwayrp">
