--- a/SheriffOffice.html
+++ b/SheriffOffice.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href='./css/style.css' rel='stylesheet'>
-	<link href='./css/midwayrp.css' rel='stylesheet'>
+    <link href='./css/sherffoffice.css' rel='stylesheet'>
     <link rel="shortcut icon" href="./css/bilder/midwayrp.png">
     <meta charset="UTF-8">
     <title>𝙈𝙄𝘿𝙒𝘼𝙔 𝙍𝙊𝙇𝙀𝙋𝙇𝘼𝙔</title>
 </head>
 <body>
-    <ul id="navmenu">
-    <li><a href="#">Home</a></li>
-	<li><a href="Info.html">Info</a></li>
+  <ul id="navmenu">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="index.html">GO back</a></li>
+    <li><a href="PoliceDepartment.html">Police Department</a></li>
+    <li><a href="HighwayPatrol.html">Highway Department</a></li>
+    <li><a href="SheriffOffice.html">Sheriff's Department</a></li>
+    <li><a href="PaletoBay.html">Paleto Department</a></li>
     <li><a href="https://discord.io/MidWayRP">Discord</a></li>
-    <li><a href="index2.html">Jobb</a></li>
-    <li><a>News</a></li>
-    <br>
-    <br>
-    <div id="midwayrp">
-    <pre>coming soon</pre>
-    </div>
 </body>
 
 </html>
