--- a/Info.html
+++ b/Info.html
@@ -11,7 +11,7 @@
     <li><a href="index.html">Home</a></li>
 	<li><a href=""href="">coming soon</a></li>
     <li><a href="">coming soon</a></li>
-    <li><a href="https://steamcommunity.com/groups/MidWayRP">Steam Group</a></li>
+    <li><a href="https://steamcommunity.com/groups/MidWayRolePlay">Steam Group</a></li>
     <li><a href=""></a></li>
     <li><a href="https://twitter.com/MidWayRP">twitter</a></li>
     <li><a href="">coming soon</a></li>
