--- a/Resources.html
+++ b/Resources.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href='./css/midwayroleplay.css' rel='stylesheet'>
+    <link href='./css/Resources.css' rel='stylesheet'>
     <link rel="shortcut icon" href="./css/bilder/midwayrp.png">
     <meta charset="UTF-8">
     <title>𝙈𝙄𝘿𝙒𝘼𝙔 𝙍𝙊𝙇𝙀𝙋𝙇𝘼𝙔</title>
@@ -10,12 +10,12 @@
     <center>
     <ul id="navmenu">
     <li><a href="#">Home</a></li>
-	<li><a href="Info.html">Info</a></li>
+    <li><a href="">Community Requirements</a></li>
+    <li><a href="">Rules and Regulations</a></li>
+    <li><a href="Staff.html">Staff</a></li>
+    <li><a href="">FAQ</a></li>
+    <li><a href="">Gallery</a></li>
     <li><a href="https://discord.io/MidWayRP">Discord</a></li>
-    <li><a href="jobb.html">Jobb</a></li>
-    <li><a href="civilian.html">Civilian</a></li>
-    <li><a href="Resources.html">Resources</a></li>
-    <li><a href="new.html">News</a></li>
     </ul>
     </center>
     </div>
