--- a/Info.html
+++ b/Info.html
@@ -9,12 +9,12 @@
 <body>
     <ul id="navmenu">
     <li><a href="index.html">Home</a></li>
-	<li><a href=""href="">coming soon</a></li>
+	<li><a href="">coming soon</a></li>
     <li><a href="">coming soon</a></li>
-    <li><a href="https://steamcommunity.com/groups/MidWayRolePlay">Steam Group</a></li>
+    <li><a href="https://steamcommunity.com/groups/MidWayRP">Steam Group</a></li>
     <li><a href=""></a></li>
     <li><a href="https://twitter.com/MidWayRP">twitter</a></li>
-    <li><a href="">coming soon</a></li>
+    <li><a href="">Youtube</a></li>
     <li><a href="">coming soon</a></li>
     <li><a href="https://discord.io/MidWayRP">Discord</a></li>
 </ul>
