--- a/staff.html
+++ b/staff.html
@@ -9,7 +9,7 @@
 <body>
     <ul id="navmenu">
         <li><a href="index.html">Home</a></li>
-        <li><a href="index.html">GO back</a></li>
+        <li><a href="Resources.html">GO back</a></li>
         <li><a href="">coming soon</a></li>
         <li><a href="">coming soon</a></li>
         <li><a href="">coming soon</a></li>
