--- a/Resources.html
+++ b/Resources.html
@@ -9,7 +9,7 @@
 <body>
     <center>
     <ul id="navmenu">
-    <li><a href="#">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="">Community Requirements</a></li>
     <li><a href="">Rules and Regulations</a></li>
     <li><a href="Staff.html">Staff</a></li>
