--- a/Info.html
+++ b/Info.html
@@ -14,7 +14,7 @@
     <li><a href="https://steamcommunity.com/groups/MidWayRP">Steam Group</a></li>
     <li><a href=""></a></li>
     <li><a href="https://twitter.com/MidWayRP">twitter</a></li>
-    <li><a href="">Youtube</a></li>
+    <li><a href="https://www.youtube.com/channel/UCHTAvo24jF5hZP0G5y415dQ">Youtube</a></li>
     <li><a href="">coming soon</a></li>
     <li><a href="https://discord.io/MidWayRP">Discord</a></li>
 </ul>
